--- a/index.html
+++ b/index.html
@@ -11,3 +11,12 @@
 
 	<script>var et_site_url='index.html';var et_post_id='101';function et_core_page_resource_fallback(a,b){"undefined"===typeof b&&(b=a.sheet.cssRules&&0===a.sheet.cssRules.length);b&&(a.onerror=null,a.onload=null,a.href?a.href=et_site_url+"/?et_core_page_resource="+a.id+et_post_id:a.src&&(a.src=et_site_url+"/?et_core_page_resource="+a.id+et_post_id))}
 </script><title>Digital Assets Tracking App - WalletBlock</title>
+
+<link rel="canonical" href="features.html" />
+<meta property="og:locale" content="en_US" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="Cryptocurrency Tracking App - WalletBlock" />
+<meta property="og:url" content="index.html" />
+<meta property="og:site_name" content="WalletBlock" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Cryptocurrency Tracking App - WalletBlock" />
