--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <link rel="canonical" href="features.html" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="Cryptocurrency Tracking App - WalletBlock" />
+<meta property="og:title" content="Digital Assets - WalletBlock" />
 <meta property="og:url" content="index.html" />
 <meta property="og:site_name" content="WalletBlock" />
 <meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Cryptocurrency Tracking App - WalletBlock" />
+<meta name="twitter:title" content="Digital Assets - WalletBlock" />
