--- a/index.html
+++ b/index.html
@@ -20,3 +20,19 @@
 <meta property="og:site_name" content="WalletBlock" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Digital Assets - WalletBlock" />
+
+<script type='text/javascript'>console.log('PixelYourSite PRO version 7.0.4.1');</script>
+<link rel='dns-prefetch' href='//fonts.googleapis.com' />
+<link rel='dns-prefetch' href='' />
+<link rel="alternate" type="application/rss+xml" title="BlockKeeper &raquo; Feed" href="" />
+<link rel="alternate" type="application/rss+xml" title="BlockKeeper &raquo; Comments Feed" href="" />
+		<script type="text/javascript">
+			window._wpemojiSettings = {
+	"baseUrl": "https:\/\/s.w.org\/images\/core\/emoji\/12.0.0-1\/72x72\/",
+	"ext": ".png",
+	"svgUrl": "https:\/\/s.w.org\/images\/core\/emoji\/12.0.0-1\/svg\/",
+	"svgExt": ".svg",
+	"source": {
+		"concatemoji": "https:\/\/blockkeeper.io\/wp-includes\/js\/wp-emoji-release.min.js?ver=5.3"
+	}
+};
