--- a/index.html
+++ b/index.html
@@ -104,3 +104,11 @@ img.emoji {
 <script type='text/javascript' src='./styles/js/sus1.js'></script>
 <script type='text/javascript' src='./styles/js/sus2.js'></script>
 <script type='text/javascript' src='./styles/js/sus3.js'></script>
+
+<script type='text/javascript' src='./styles/js/plug.js'></script>
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" /><link rel="shortcut icon" href="./styles/img/fav.png" /><style type="text/css" id="custom-background-css">
+body.custom-background { background-color: #fffcfc; }
+</style>
+	
