--- a/index.html
+++ b/index.html
@@ -116,3 +116,13 @@ body.custom-background { background-color: #fffcfc; }
 <link rel="stylesheet" id="et-divi-customizer-global-cached-inline-styles" href="./styles/css/afterend.css" onerror="et_core_page_resource_fallback(this, true)" onload="et_core_page_resource_fallback(this)" /></head>
 <body data-cmplz=1 class="home page-template-default page page-id-101 custom-background et_pb_button_helper_class et_fixed_nav et_show_nav et_cover_background et_pb_gutter osx et_pb_gutters3 et_primary_nav_dropdown_animation_fade et_secondary_nav_dropdown_animation_fade et_pb_footer_columns4 et_header_style_left et_pb_pagebuilder_layout et_full_width_page et_divi_theme et-db et_minified_js et_minified_css">
 	<div id="page-container">
+
+	
+			<header id="main-header" data-height-onload="60">
+			<div class="container clearfix et_menu_container">
+							<div class="logo_container">
+					<span class="logo_helper"></span>
+					<a href="index.html">
+						<img src="./styles/img/logomain.jpg" alt="BlockKeeper" id="logo" data-height-percentage="30" />
+					</a>
+				</div>
