--- a/index.html
+++ b/index.html
@@ -463,3 +463,5 @@
 				
 			</div> <!-- .et_pb_row --><div class="et_pb_row et_pb_row_11">
 				<div class="et_pb_column et_pb_column_1_4 et_pb_column_16  et_pb_css_mix_blend_mode_passthrough">	
+	<div class="et_pb_module et_pb_team_member et_pb_team_member_0 et_pb_bg_layout_light clearfix  et_pb_text_align_left">
+				
