--- a/index.html
+++ b/index.html
@@ -464,4 +464,7 @@
 			</div> <!-- .et_pb_row --><div class="et_pb_row et_pb_row_11">
 				<div class="et_pb_column et_pb_column_1_4 et_pb_column_16  et_pb_css_mix_blend_mode_passthrough">	
 	<div class="et_pb_module et_pb_team_member et_pb_team_member_0 et_pb_bg_layout_light clearfix  et_pb_text_align_left">
-				
+			
+				<div class="et_pb_team_member_image et-waypoint et_pb_animation_fade_in">
+					<img src="./styles/img/portrait.png" alt="Daniel Wingen" />
+				</div>	
