--- a/index.html
+++ b/index.html
@@ -468,3 +468,9 @@
 				<div class="et_pb_team_member_image et-waypoint et_pb_animation_fade_in">
 					<img src="./styles/img/portrait.png" alt="Daniel Wingen" />
 				</div>	
+<div class="et_pb_team_member_description">
+					<h3 class="et_pb_module_header">Nrup Patel</h3>
+					<p class="et_pb_member_position">Founder</p>
+					An engineering creative, product innovator, and Full-Stack tinkerer. He has worked across the stack to produce digital experiences from concept to deployment.  Find him in the office building mockups in sketch and building them out from the ground up using his favorite frameworks.
+                    <a href="https://nruppatel.com" target="_blank" rel="noopener noreferrer">Personal Website</a>, <a href="https://www.github.com/nruppatel133" target="_blank" rel="noopener noreferrer">GitHub</a> <a href="https://www.behance.net/nruppatel" target="_blank" rel="noopener noreferrer">Behance</a></p>
+				</div> <!-- .et_pb_team_member_description -->
