--- a/index.html
+++ b/index.html
@@ -474,3 +474,6 @@
 					An engineering creative, product innovator, and Full-Stack tinkerer. He has worked across the stack to produce digital experiences from concept to deployment.  Find him in the office building mockups in sketch and building them out from the ground up using his favorite frameworks.
                     <a href="https://nruppatel.com" target="_blank" rel="noopener noreferrer">Personal Website</a>, <a href="https://www.github.com/nruppatel133" target="_blank" rel="noopener noreferrer">GitHub</a> <a href="https://www.behance.net/nruppatel" target="_blank" rel="noopener noreferrer">Behance</a></p>
 				</div> <!-- .et_pb_team_member_description -->
+	</div> <!-- .et_pb_team_member -->
+			</div> <!-- .et_pb_column --><div class="et_pb_column et_pb_column_1_4 et_pb_column_17  et_pb_css_mix_blend_mode_passthrough">
+				
