--- a/index.html
+++ b/index.html
@@ -488,3 +488,5 @@
 					<div class="et_pb_row et_pb_row_13">
 				<div class="et_pb_column et_pb_column_2_3 et_pb_column_23  et_pb_css_mix_blend_mode_passthrough">
 				
+				<div class="et_pb_module et_pb_signup_0 et_animated et_pb_newsletter_layout_left_right et_pb_newsletter et_pb_subscribe clearfix et_pb_bg_layout_light  et_pb_text_align_left et_pb_no_bg">
+					
