--- a/index.html
+++ b/index.html
@@ -498,3 +498,12 @@
                         WalletBlocks users are completely anonymous. No one can reach out to users as we don't have their emails or contact information. This is key to security and privacy reasons, it makes it very difficult for us to inform about new product updates. To make sure you know about product updates, sign up for the monthly newsletter. 
                         </p>
 				</div>
+
+				<div class="et_pb_newsletter_form">
+					<form method="post">
+						<div class="et_pb_newsletter_result et_pb_newsletter_error"></div>
+						<div class="et_pb_newsletter_result et_pb_newsletter_success">
+							<h2>Please stay tuned for new product updates!</h2>
+						</div>
+						<div class="et_pb_newsletter_fields">
+							
