--- a/index.html
+++ b/index.html
@@ -507,3 +507,8 @@
 						</div>
 						<div class="et_pb_newsletter_fields">
 							
+<p class="et_pb_newsletter_field et_pb_contact_field_last et_pb_contact_field_last_tablet et_pb_contact_field_last_phone">
+						<label class="et_pb_contact_form_label" for="et_pb_signup_firstname" style="display: none;">Name</label>
+						<input id="et_pb_signup_firstname" class="input" type="text" placeholder="Name" name="et_pb_signup_firstname">
+					</p>
+							
