--- a/index.html
+++ b/index.html
@@ -516,3 +516,10 @@
 						<label class="et_pb_contact_form_label" for="et_pb_signup_email" style="display: none;">Email</label>
 						<input id="et_pb_signup_email" class="input" type="text" placeholder="Email" name="et_pb_signup_email">
 					</p>					
+	
+					<p class="et_pb_newsletter_button_wrap">
+						<a class="et_pb_newsletter_button et_pb_button et_pb_custom_button_icon" href="#" data-icon="&#x24;">
+							<span class="et_subscribe_loader"></span>
+							<span class="et_pb_newsletter_button_text">Sign Up</span>
+						</a>
+					</p>
