--- a/index.html
+++ b/index.html
@@ -523,3 +523,10 @@
 							<span class="et_pb_newsletter_button_text">Sign Up</span>
 						</a>
 					</p>
+</div>
+						
+						<input type="hidden" value="mailchimp" name="et_pb_signup_provider" />
+						<input type="hidden" value="a581145093" name="et_pb_signup_list_id" />
+						<input type="hidden" value="Blockkeeper" name="et_pb_signup_account_name" />
+						<input type="hidden" value="true" name="et_pb_signup_ip_address" />
+					</form>
