--- a/index.html
+++ b/index.html
@@ -530,3 +530,8 @@
 						<input type="hidden" value="Blockkeeper" name="et_pb_signup_account_name" />
 						<input type="hidden" value="true" name="et_pb_signup_ip_address" />
 					</form>
+</div>
+			</div>
+			</div> <!-- .et_pb_column --><div class="et_pb_column et_pb_column_1_3 et_pb_column_24  et_pb_css_mix_blend_mode_passthrough et-last-child et_pb_column_empty">
+				
+				
