--- a/index.html
+++ b/index.html
@@ -416,5 +416,12 @@
 </ul>					</div>
 				</div> <!-- #et-footer-nav -->
 
-				
+			
+				<div id="footer-bottom">
+					<div class="container clearfix">
+									</div>	<!-- .container -->
+				</div>
+			</footer> <!-- #main-footer -->
+		</div> <!-- #et-main-area -->
+	
 				
