--- a/index.html
+++ b/index.html
@@ -423,5 +423,19 @@
 				</div>
 			</footer> <!-- #main-footer -->
 		</div> <!-- #et-main-area -->
-	
+	</div> <!-- #page-container -->
+
+		<script type="text/javascript">
+				var et_animation_data = [{"class":"et_pb_image_0","style":"slideBottom","repeat":"once","duration":"750ms","delay":"0ms","intensity":"10%","starting_opacity":"0%","speed_curve":"ease-in-out"},{"class":"et_pb_image_6","style":"slideLeft","repeat":"once","duration":"500ms","delay":"0ms","intensity":"10%","starting_opacity":"0%","speed_curve":"ease-in-out"},{"class":"et_pb_image_7","style":"slideRight","repeat":"once","duration":"500ms","delay":"0ms","intensity":"10%","starting_opacity":"0%","speed_curve":"ease-in-out"},{"class":"et_pb_signup_0","style":"fade","repeat":"once","duration":"1500ms","delay":"0ms","intensity":"50%","starting_opacity":"0%","speed_curve":"ease-in-out"}];
+			</script>
+	<noscript><img height="1" width="1" style="display: none;" src="" alt="facebook_pixel"></noscript>
+<noscript><img height="1" width="1" style="display: none;" src="" alt="facebook_pixel"></noscript>
+<script type='text/javascript'>
+/* <![CDATA[ */
+var DIVI = {"item_count":"%d Item","items_count":"%d Items"};
+var et_shortcodes_strings = {"previous":"Previous","next":"Next"};
+var et_pb_custom = {"ajaxurl":"https:\/\/blockkeeper.io\/wp-admin\/admin-ajax.php","images_uri":"https:\/\/blockkeeper.io\/wp-content\/themes\/Divi\/images","builder_images_uri":"https:\/\/blockkeeper.io\/wp-content\/themes\/Divi\/includes\/builder\/images","et_frontend_nonce":"cb2f0d53a3","subscription_failed":"Please, check the fields below to make sure you entered the correct information.","et_ab_log_nonce":"2aec169cba","fill_message":"Please, fill in the following fields:","contact_error_message":"Please, fix the following errors:","invalid":"Invalid email","captcha":"Captcha","prev":"Prev","previous":"Previous","next":"Next","wrong_captcha":"You entered the wrong number in captcha.","ignore_waypoints":"no","is_divi_theme_used":"1","widget_search_selector":".widget_search","is_ab_testing_active":"","page_id":"101","unique_test_id":"","ab_bounce_rate":"5","is_cache_plugin_active":"no","is_shortcode_tracking":"","tinymce_uri":""};
+var et_pb_box_shadow_elements = [];
+/* ]]> */
+</script>
 				
