--- a/index.html
+++ b/index.html
@@ -438,4 +438,11 @@ var et_pb_custom = {"ajaxurl":"https:\/\/blockkeeper.io\/wp-admin\/admin-ajax.ph
 var et_pb_box_shadow_elements = [];
 /* ]]> */
 </script>
-				
+<script type='text/javascript' src='./styles/js/frontend.js'></script>
+<script type='text/javascript' src='./styles/js/themes2.js'></script>
+<script type='text/javascript' src='./styles/js/plugins.js'></script>
+<script type='text/javascript'>
+/* <![CDATA[ */
+var complianz = {"static":"","set_cookies":[],"banner_version":"2","version":"3.0.10","a_b_testing":"","do_not_track":"","consenttype":"optin","geoip":"","categories":"","position":"bottom","title":"Default Cookie Banner","theme":"edgeless","use_categories":"","accept":"All cookies","revoke":"Settings","dismiss":"Functional only","dismiss_on_scroll":"","dismiss_on_timeout":"","dismiss_timeout":"10","popup_background_color":"#ffffff","popup_text_color":"#fff","button_background_color":"#fff","button_text_color":"#ffffff","border_color":"","use_custom_cookie_css":"","custom_css":".cc-window .cc-category{} \n.cc-window .cc-check{}","save_preferences":"Save preferences","readmore_optin":"Read more","accept_informational":"Accept","message_optout":"We use cookies to optimize our website and our service.","message_optin":"We use cookies to optimize our website and our service.","readmore_optout":"Cookie Statement (US)","readmore_privacy":"Privacy statement","view_preferences":"View preferences","hide_revoke":"","type":"opt-in","layout":"basic","cookie_expiry":"365","readmore_url":"https:\/\/blockkeeper.io\/cookie-policy\/","readmore_url_us":"","privacy_link":"","nonce":"aa3090f986","url":"https:\/\/blockkeeper.io\/wp-admin\/admin-ajax.php","current_policy_id":"9"};
+/* ]]> */
+</script>				
