--- a/index.html
+++ b/index.html
@@ -462,3 +462,435 @@ var complianz = {"static":"","set_cookies":[],"banner_version":"2","version":"3.
     padding-left: 0px;
     background-color: #210045!important
 }
+.et_pb_row_12.et_pb_row {
+    padding-top: 27px!important;
+    padding-right: 0px!important;
+    padding-bottom: 60px!important;
+    padding-left: 0px!important;
+    padding-top: 27px;
+    padding-right: 0px;
+    padding-bottom: 60px;
+    padding-left: 0px
+}
+.et_pb_team_member_2.et_pb_team_member h4, .et_pb_team_member_2.et_pb_team_member h1.et_pb_module_header, .et_pb_team_member_2.et_pb_team_member h2.et_pb_module_header, .et_pb_team_member_2.et_pb_team_member h3.et_pb_module_header, .et_pb_team_member_2.et_pb_team_member h5.et_pb_module_header, .et_pb_team_member_2.et_pb_team_member h6.et_pb_module_header {
+    font-size: 20px;
+    color: #210045!important;
+    line-height: 1.9em
+}
+.et_pb_team_member_2.et_pb_team_member {
+    font-size: 14px;
+    color: #907fa2!important;
+    line-height: 1.3em
+}
+.et_pb_team_member_2.et_pb_team_member .et_pb_team_member_image {
+    border-radius: 50% 50% 50% 50%;
+    overflow: hidden;
+    margin-right: 0
+}
+.et_pb_team_member_3.et_pb_team_member h4, .et_pb_team_member_3.et_pb_team_member h1.et_pb_module_header, .et_pb_team_member_3.et_pb_team_member h2.et_pb_module_header, .et_pb_team_member_3.et_pb_team_member h3.et_pb_module_header, .et_pb_team_member_3.et_pb_team_member h5.et_pb_module_header, .et_pb_team_member_3.et_pb_team_member h6.et_pb_module_header {
+    font-size: 20px;
+    color: #210045!important;
+    line-height: 1.9em
+}
+.et_pb_team_member_3.et_pb_team_member {
+    font-size: 14px;
+    color: #907fa2!important;
+    line-height: 1.3em
+}
+.et_pb_team_member_3.et_pb_team_member .et_pb_team_member_image {
+    border-radius: 50% 50% 50% 50%;
+    overflow: hidden;
+    margin-right: 0
+}
+.et_pb_row_12 {
+    max-width: 810px
+}
+.et_pb_team_member_1.et_pb_team_member {
+    font-size: 14px;
+    color: #907fa2!important;
+    line-height: 1.3em
+}
+.et_pb_team_member_4.et_pb_team_member h4, .et_pb_team_member_4.et_pb_team_member h1.et_pb_module_header, .et_pb_team_member_4.et_pb_team_member h2.et_pb_module_header, .et_pb_team_member_4.et_pb_team_member h3.et_pb_module_header, .et_pb_team_member_4.et_pb_team_member h5.et_pb_module_header, .et_pb_team_member_4.et_pb_team_member h6.et_pb_module_header {
+    font-size: 20px;
+    color: #210045!important;
+    line-height: 1.9em
+}
+.et_pb_team_member_4.et_pb_team_member {
+    font-size: 14px;
+    color: #907fa2!important;
+    line-height: 1.3em
+}
+.et_pb_team_member_4.et_pb_team_member .et_pb_team_member_image {
+    border-radius: 50% 50% 50% 50%;
+    overflow: hidden;
+    margin-right: 0
+}
+.et_pb_team_member_5.et_pb_team_member h4, .et_pb_team_member_5.et_pb_team_member h1.et_pb_module_header, .et_pb_team_member_5.et_pb_team_member h2.et_pb_module_header, .et_pb_team_member_5.et_pb_team_member h3.et_pb_module_header, .et_pb_team_member_5.et_pb_team_member h5.et_pb_module_header, .et_pb_team_member_5.et_pb_team_member h6.et_pb_module_header {
+    font-size: 20px;
+    color: #210045!important;
+    line-height: 1.9em
+}
+.et_pb_team_member_5.et_pb_team_member {
+    font-size: 14px;
+    color: #907fa2!important;
+    line-height: 1.3em
+}
+.et_pb_team_member_5.et_pb_team_member .et_pb_team_member_image {
+    border-radius: 50% 50% 50% 50%;
+    overflow: hidden;
+    margin-right: 0
+}
+.et_pb_team_member_1.et_pb_team_member .et_pb_team_member_image {
+    border-radius: 50% 50% 50% 50%;
+    overflow: hidden;
+    margin-right: 0
+}
+.et_pb_team_member_1.et_pb_team_member h4, .et_pb_team_member_1.et_pb_team_member h1.et_pb_module_header, .et_pb_team_member_1.et_pb_team_member h2.et_pb_module_header, .et_pb_team_member_1.et_pb_team_member h3.et_pb_module_header, .et_pb_team_member_1.et_pb_team_member h5.et_pb_module_header, .et_pb_team_member_1.et_pb_team_member h6.et_pb_module_header {
+    font-size: 20px;
+    color: #210045!important;
+    line-height: 1.9em
+}
+.et_pb_team_member_6.et_pb_team_member {
+    font-size: 14px;
+    color: #907fa2!important;
+    line-height: 1.3em
+}
+	   .et_pb_image_7 {
+    text-align: left;
+    margin-left: 0
+}
+.et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button {
+    transition: color 300ms ease 0ms, letter-spacing 300ms ease 0ms
+}
+body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button {
+    color: #8300e9!important;
+    border-color: #8300e9
+}
+.et_pb_row_0.et_pb_row {
+    padding-top: 26px!important;
+    padding-right: 0px!important;
+    padding-bottom: 16px!important;
+    padding-left: 0px!important;
+    padding-top: 26px;
+    padding-right: 0px;
+    padding-bottom: 16px;
+    padding-left: 0px
+}
+body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button, body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button:hover {
+    padding: 0.3em 1em!important
+}
+body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button:before, body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button:after {
+    display: none!important
+}
+.et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button {
+    transition: color 300ms ease 0ms, border-radius 300ms ease 0ms, letter-spacing 300ms ease 0ms
+}
+.et_pb_section_5.et_pb_section {
+    padding-top: 40px;
+    padding-right: 0px;
+    padding-bottom: 5px;
+    padding-left: 0px;
+    background-color: #F4F2F5!important
+}
+.et_pb_team_member_0.et_pb_team_member .et_pb_team_member_image {
+    border-radius: 50% 50% 50% 50%;
+    overflow: hidden;
+    margin-right: 0
+}
+.et_pb_row_10.et_pb_row {
+    padding-top: 27px!important;
+    padding-right: 0px!important;
+    padding-bottom: 40px!important;
+    padding-left: 0px!important;
+    padding-top: 27px;
+    padding-right: 0px;
+    padding-bottom: 40px;
+    padding-left: 0px
+}
+.et_pb_text_8.et_pb_text {
+    color: #210045!important
+}
+.et_pb_text_8 h1 {
+    color: #210045!important
+}
+.et_pb_row_11.et_pb_row {
+    padding-top: 27px!important;
+    padding-right: 0px!important;
+    padding-bottom: 60px!important;
+    padding-left: 0px!important;
+    padding-top: 27px;
+    padding-right: 0px;
+    padding-bottom: 60px;
+    padding-left: 0px
+}
+.et_pb_team_member_0.et_pb_team_member h4, .et_pb_team_member_0.et_pb_team_member h1.et_pb_module_header, .et_pb_team_member_0.et_pb_team_member h2.et_pb_module_header, .et_pb_team_member_0.et_pb_team_member h3.et_pb_module_header, .et_pb_team_member_0.et_pb_team_member h5.et_pb_module_header, .et_pb_team_member_0.et_pb_team_member h6.et_pb_module_header {
+    font-size: 20px;
+    color: #210045!important;
+    line-height: 1.9em
+}
+.et_pb_team_member_0.et_pb_team_member {
+    font-size: 14px;
+    color: #907fa2!important;
+    line-height: 1.3em
+}
+.et_pb_team_member_6.et_pb_team_member h4, .et_pb_team_member_6.et_pb_team_member h1.et_pb_module_header, .et_pb_team_member_6.et_pb_team_member h2.et_pb_module_header, .et_pb_team_member_6.et_pb_team_member h3.et_pb_module_header, .et_pb_team_member_6.et_pb_team_member h5.et_pb_module_header, .et_pb_team_member_6.et_pb_team_member h6.et_pb_module_header {
+    font-size: 20px;
+    color: #210045!important;
+    line-height: 1.9em
+}
+.et_pb_team_member_6.et_pb_team_member .et_pb_team_member_image {
+    border-radius: 50% 50% 50% 50%;
+    overflow: hidden;
+    margin-right: 0
+}
+body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button, body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button:hover {
+    padding: 0.3em 1em!important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input:hover::-webkit-input-placeholder {
+    color: !important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input:focus:hover {
+    background-color:
+}
+.et_pb_signup_0 .et_pb_newsletter_form p input[type="text"], .et_pb_signup_0 .et_pb_newsletter_form p textarea, .et_pb_signup_0 .et_pb_newsletter_form p select, .et_pb_signup_0 .et_pb_newsletter_form p .input[type="checkbox"]+label i:before, .et_pb_signup_0 .et_pb_newsletter_form p .input::placeholder {
+    color: #bcb2c7!important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input::-webkit-input-placeholder {
+    color: #bcb2c7!important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input::-moz-placeholder {
+    color: #bcb2c7!important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input::-ms-input-placeholder {
+    color: #bcb2c7!important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p input[type="text"]:hover, .et_pb_signup_0 .et_pb_newsletter_form p textarea:hover, .et_pb_signup_0 .et_pb_newsletter_form p select:hover, .et_pb_signup_0 .et_pb_newsletter_form p .input[type="checkbox"]+label:hover i:before, .et_pb_signup_0 .et_pb_newsletter_form p .input:hover::placeholder {
+    color: !important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input:hover::-moz-placeholder {
+    color: !important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p input[type="text"], .et_pb_signup_0 .et_pb_newsletter_form p textarea, .et_pb_signup_0 .et_pb_newsletter_form p select, .et_pb_signup_0 .et_pb_newsletter_form p .input[type="checkbox"]+label i, .et_pb_signup_0 .et_pb_newsletter_form p .input[type="radio"]+label i {
+    background-color: #F4F2F5
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input:hover::-ms-input-placeholder {
+    color: !important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input:focus:hover, .et_pb_signup_0 .et_pb_newsletter_form p .input:focus:hover::placeholder {
+    color: !important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input:focus:hover::-webkit-input-placeholder {
+    color: !important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input:focus:hover::-moz-placeholder {
+    color: !important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input:focus:hover::-ms-input-placeholder {
+    color: !important
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input[type="radio"]+label i:before {
+    background-color: #bcb2c7
+}
+.et_pb_signup_0 .et_pb_newsletter_form p input[type="text"]:hover, .et_pb_signup_0 .et_pb_newsletter_form p textarea:hover, .et_pb_signup_0 .et_pb_newsletter_form p select:hover, .et_pb_signup_0 .et_pb_newsletter_form p .input[type="checkbox"]+label:hover i, .et_pb_signup_0 .et_pb_newsletter_form p .input[type="radio"]+label:hover i {
+    background-color:
+}
+body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:after {
+    line-height: inherit;
+    font-size: inherit!important;
+    margin-left: -1em;
+    left: auto
+}
+.et_pb_team_member_6.et_pb_team_member .et_pb_member_social_links {}
+.et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_form .input::-webkit-input-placeholder {
+    text-shadow:
+}
+div.et_pb_section.et_pb_section_6 {
+    background-size: contain;
+    background-position: top right;
+    background-image: url(./styles/img/iphones.png)!important
+}
+.et_pb_section_6.et_pb_section {
+    padding-top: 20px;
+    padding-right: 0px;
+    padding-bottom: 30px;
+    padding-left: 0px
+}
+div.et_pb_section.et_pb_section_7 {
+    background-size: contain;
+    background-position: top right;
+    background-image: url(./styles/img/iphones.png)!important
+}
+.et_pb_section_7.et_pb_section {
+    padding-top: 20px;
+    padding-right: 0px;
+    padding-bottom: 30px;
+    padding-left: 0px;
+    background-color: #ffffff!important
+}
+.et_pb_signup_0.et_pb_contact_field .et_pb_contact_field_options_title {
+    text-shadow:
+}
+.et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_form .input {
+    text-shadow:
+}
+.et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_form .input::-moz-placeholder {
+    text-shadow:
+}
+body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:hover:after {
+    margin-left: .3em;
+    left: auto;
+    margin-left: .3em;
+    opacity: 1;
+    color:
+}
+.et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_form .input:-ms-input-placeholder {
+    text-shadow:
+}
+.et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_form .input[type=checkbox]+label {
+    text-shadow:
+}
+.et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_form .input[type=radio]+label {
+    text-shadow:
+}
+.et_pb_signup_0 .et_pb_newsletter_form p .input {
+    text-shadow:
+}
+.et_pb_signup_0.et_pb_subscribe {
+    margin-top: 40px!important;
+    margin-right: 25px!important;
+    margin-bottom: 25px!important;
+    margin-left: 25px!important
+}
+body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button {
+    color: #8300e9!important;
+    border-radius: 2px
+}
+body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button:before, body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button:after {
+    display: none!important
+}
+body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button:hover {
+    color: #9a40ff!important;
+    border-radius: 2px;
+    letter-spacing: 0px
+}
+	   
+body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button:hover {
+    color: #9a40ff!important;
+    letter-spacing: 0px
+}
+.et_pb_section_1.et_pb_section {
+    padding-top: 1px;
+    padding-right: 0px;
+    padding-bottom: 1px;
+    padding-left: 0px;
+    background-color: #f4f2f5!important
+}
+.et_pb_text_3 h1 {
+    color: #9a9a9a!important
+}
+.et_pb_text_3 {
+    font-family: 'Source Sans Pro', Helvetica, Arial, Lucida, sans-serif;
+    font-size: 22px;
+    margin-top: 18px!important;
+    margin-bottom: 0px!important;
+    font-weight: 300
+}
+.et_pb_text_3.et_pb_text {
+    color: #9a9a9a!important
+}
+.et_pb_text_2 {
+    font-family: 'Source Sans Pro', Helvetica, Arial, Lucida, sans-serif;
+    font-size: 52px;
+    line-height: 1.2em;
+    margin-top: 20px!important;
+    margin-bottom: 0px!important;
+    max-width: 80%;
+    font-weight: 300
+}
+.et_pb_text_2 p {
+    line-height: 1.2em
+}
+.et_pb_text_2.et_pb_text {
+    color: #303030!important
+}
+.et_pb_row_5.et_pb_row {
+    padding-top: 21px!important;
+    padding-top: 21px
+}
+.et_pb_section_2.et_pb_section {
+    padding-top: 30px;
+    padding-right: 0px;
+    padding-bottom: 60px;
+    padding-left: 0px;
+    background-color: #ffffff!important
+}
+.et_pb_image_1 {
+    text-align: center
+}
+.et_pb_row_4.et_pb_row {
+    padding-top: 4px!important;
+    padding-right: 0px!important;
+    padding-bottom: 27px!important;
+    padding-left: 0px!important;
+    padding-top: 4px;
+    padding-right: 0px;
+    padding-bottom: 27px;
+    padding-left: 0px
+}
+.et_pb_text_1 {
+    font-family: 'Source Sans Pro', Helvetica, Arial, Lucida, sans-serif;
+    font-weight: 600
+}
+.et_pb_text_1.et_pb_text {
+    color: #bcb2c7!important
+}
+.et_pb_row_3.et_pb_row {
+    padding-top: 20px!important;
+    padding-right: 0px!important;
+    padding-bottom: 5px!important;
+    padding-left: 0px!important;
+    padding-top: 20px;
+    padding-right: 0px;
+    padding-bottom: 5px;
+    padding-left: 0px
+}
+.et_pb_image_0 {
+    text-align: center
+}
+.et_pb_image_3 {
+    max-width: 45%;
+    text-align: left;
+    margin-left: 0
+}
+.et_pb_row_2.et_pb_row {
+    padding-top: 0px!important;
+    padding-right: 0px!important;
+    padding-bottom: 0px!important;
+    padding-left: 0px!important;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px
+}
+.et_pb_button_0, .et_pb_button_0:after {
+    transition: all 300ms ease 0ms
+}
+.et_pb_button_0 {
+    box-shadow: 0px 12px 18px -6px rgba(0, 0, 0, 0.3)
+}
+body #page-container .et_pb_section .et_pb_button_0:after {
+    line-height: inherit;
+    font-size: inherit!important;
+    margin-left: -1em;
+    left: auto
+}
+body #page-container .et_pb_section .et_pb_button_0:hover:after {
+    margin-left: .3em;
+    left: auto;
+    margin-left: .3em;
+    opacity: 1;
+    color:
+}
+body #page-container .et_pb_section .et_pb_button_0:hover {
+    border-radius: 0px
+}
