--- a/index.html
+++ b/index.html
@@ -894,3 +894,176 @@ body #page-container .et_pb_section .et_pb_button_0:hover:after {
 body #page-container .et_pb_section .et_pb_button_0:hover {
     border-radius: 0px
 }
+body #page-container .et_pb_section .et_pb_button_0 {
+    border-width: 0px!important;
+    border-radius: 2px;
+    font-size: 26px;
+    font-family: 'Source Sans Pro', Helvetica, Arial, Lucida, sans-serif!important;
+    font-weight: 700!important;
+    background-color: #d50073
+}
+.et_pb_row_1.et_pb_row {
+    padding-top: 0px!important;
+    padding-right: 0px!important;
+    padding-bottom: 0px!important;
+    padding-left: 0px!important;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px
+}
+.et_pb_text_0 h4 {
+    text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, 0.4)
+}
+.et_pb_text_0 h3 {
+    text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, 0.4)
+}
+.et_pb_text_0 h2 {
+    text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, 0.4)
+}
+.et_pb_text_0 h1 {
+    font-family: 'Source Sans Pro', Helvetica, Arial, Lucida, sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, 0.4)
+}
+.et_pb_text_0 {
+    font-family: 'Source Sans Pro', Helvetica, Arial, Lucida, sans-serif;
+    font-size: 20px;
+    line-height: 2em;
+    text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, 0.4);
+    margin-top: 25px!important;
+    margin-bottom: 25px!important
+}
+.et_pb_text_0 p {
+    line-height: 2em
+}
+body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button {
+    color: #8300e9!important;
+    border-color: #8300e9
+}
+.et_pb_image_2 {
+    max-width: 44%;
+    text-align: left;
+    margin-left: 0
+}
+.et_pb_image_4 {
+    max-width: 45%;
+    text-align: left;
+    margin-left: 0
+}
+.et_pb_section_3.et_pb_section {
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 0px;
+    padding-left: 0px
+}
+.et_pb_cta_0.et_pb_promo .et_pb_button_wrapper {
+    text-align: left
+}
+.et_pb_cta_0.et_pb_promo {
+    margin-top: 0px!important;
+    margin-right: 0px!important
+}
+.et_pb_image_6 {
+    text-align: left;
+    margin-left: 0
+}
+.et_pb_fullwidth_header_0.et_pb_fullwidth_header .et_pb_fullwidth_header_overlay {
+    background-color: rgba(48, 48, 48, 0.39)
+}
+.et_pb_fullwidth_header_0 .header-content-container .header-content .et_pb_button_one.et_pb_button {
+    id="a.signup_mail"
+}
+body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:after {
+    line-height: inherit;
+    font-size: inherit!important;
+    opacity: 0;
+    margin-left: -1em;
+    left: auto;
+    display: inline-block
+}
+body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:hover:after {
+    margin-left: .3em;
+    left: auto;
+    margin-left: .3em;
+    opacity: 1;
+    color:
+}
+body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:hover {
+    padding-left: 0.7em;
+    padding-right: 2em
+}
+body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button {
+    color: #ffffff!important;
+    border-radius: 2px;
+    font-size: 21px
+}
+.et_pb_fullwidth_header_0 {
+    padding-top: 120px;
+    padding-bottom: 120px;
+    margin-top: 0px;
+    margin-bottom: 0px
+}
+.et_pb_fullwidth_header.et_pb_fullwidth_header_0 {
+    background-color: rgba(255, 255, 255, 0)
+}
+.et_pb_fullwidth_header_0 .header-content {
+    text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, 0.4)
+}
+.et_pb_fullwidth_header_0.et_pb_fullwidth_header .et_pb_header_content_wrapper {
+    font-family: 'Source Sans Pro', Helvetica, Arial, Lucida, sans-serif;
+    font-weight: 300;
+    font-weight: 300;
+    font-size: 30px;
+    text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, 0.4)
+}
+.et_pb_fullwidth_header_0.et_pb_fullwidth_header .header-content h1, .et_pb_fullwidth_header_0.et_pb_fullwidth_header .header-content h2.et_pb_module_header, .et_pb_fullwidth_header_0.et_pb_fullwidth_header .header-content h3.et_pb_module_header, .et_pb_fullwidth_header_0.et_pb_fullwidth_header .header-content h4.et_pb_module_header, .et_pb_fullwidth_header_0.et_pb_fullwidth_header .header-content h5.et_pb_module_header, .et_pb_fullwidth_header_0.et_pb_fullwidth_header .header-content h6.et_pb_module_header {
+    font-family: 'Source Sans Pro', Helvetica, Arial, Lucida, sans-serif;
+    font-size: 50px;
+    letter-spacing: 1px;
+    text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, 0.4)
+}
+.et_pb_fullwidth_header_0.et_pb_fullwidth_header .et_pb_fullwidth_header_subhead {
+    font-size: 15px;
+    text-shadow: 0em 0.1em 0.1em rgba(0, 0, 0, 0.4)
+}
+.et_pb_section_8.et_pb_section {
+    background-color: #210045!important
+}
+.et_pb_button_1, .et_pb_button_1:after {
+    transition: all 300ms ease 0ms
+}
+.et_pb_image_5 {
+    max-width: 45%;
+    text-align: left;
+    margin-left: 0
+}
+.et_pb_column_15 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_24 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_0 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_20 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_13 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_12 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_11 {
+    z-index: 9;
+    position: relative
+}
