--- a/index.html
+++ b/index.html
@@ -1067,3 +1067,96 @@ body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.
     z-index: 9;
     position: relative
 }
+.et_pb_column_7 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_1 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_14 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_21 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_9 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_18 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_5 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_22 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_23 {
+    background-color: rgba(255, 255, 255, 0.83);
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_10 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_4 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_17 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_8 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_3 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_19 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_16 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_2 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_column_6 {
+    z-index: 9;
+    position: relative
+}
+.et_pb_image_5.et_pb_module {
+    margin-left: auto!important;
+    margin-right: auto!important
+}
+.et_pb_image_4.et_pb_module {
+    margin-left: auto!important;
+    margin-right: auto!important
+}
+.et_pb_image_3.et_pb_module {
+    margin-left: auto!important;
+    margin-right: auto!important
+}
+.et_pb_text_2.et_pb_module {
+    margin-left: auto!important;
+    margin-right: auto!important
+}
+.et_pb_image_2.et_pb_module {
+    margin-left: auto!important;
+    margin-right: auto!important
+}
