--- a/index.html
+++ b/index.html
@@ -1160,3 +1160,264 @@ body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.
     margin-left: auto!important;
     margin-right: auto!important
 }
+
+@media only screen and (max-width:980px) {
+    body #page-container .et_pb_section .et_pb_button_0 {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:before {
+        display: none
+    }
+    body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:before {
+        display: none
+    }
+    body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:after {
+        line-height: inherit;
+        font-size: inherit!important;
+        margin-left: -1em;
+        left: auto;
+        display: inline-block;
+        opacity: 0;
+        content: attr(data-icon);
+        font-family: "ETmodules"!important
+    }
+    body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    .et_pb_image_7 {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto
+    }
+    body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    .et_pb_cta_1.et_pb_promo {
+        margin-top: 0px!important
+    }
+    body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    .et_pb_cta_0.et_pb_promo {
+        margin-top: 0px!important;
+        margin-right: 0px!important
+    }
+    .et_pb_image_6 {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:hover:after {
+        margin-left: .3em;
+        left: auto;
+        margin-left: .3em;
+        opacity: 1
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:after {
+        line-height: inherit;
+        font-size: inherit!important;
+        margin-left: -1em;
+        left: auto;
+        display: inline-block;
+        opacity: 0;
+        content: attr(data-icon);
+        font-family: "ETmodules"!important
+    }
+    body #page-container .et_pb_section .et_pb_button_0:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    .et_pb_image_5 {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_image_4 {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_image_3 {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_image_2 {
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_text_2 {
+        font-size: 46px
+    }
+    .et_pb_section_2.et_pb_section {
+        padding-top: 50px;
+        padding-right: 0px;
+        padding-bottom: 50px;
+        padding-left: 0px
+    }
+    .et_pb_image_1 {
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_image_0 {
+        margin-left: auto;
+        margin-right: auto
+    }
+    body #page-container .et_pb_section .et_pb_button_0:hover:after {
+        margin-left: .3em;
+        left: auto;
+        margin-left: .3em;
+        opacity: 1
+    }
+    body #page-container .et_pb_section .et_pb_button_0:before {
+        display: none
+    }
+    body #page-container .et_pb_section .et_pb_button_0:after {
+        line-height: inherit;
+        font-size: inherit!important;
+        margin-left: -1em;
+        left: auto;
+        display: inline-block;
+        opacity: 0;
+        content: attr(data-icon);
+        font-family: "ETmodules"!important
+    }
+    body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:hover:after {
+        margin-left: .3em;
+        left: auto;
+        margin-left: .3em;
+        opacity: 1
+    }
+}
+@media only screen and (max-width:767px) {
+    body #page-container .et_pb_section .et_pb_button_0 {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:before {
+        display: none
+    }
+    body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:before {
+        display: none
+    }
+    body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:after {
+        line-height: inherit;
+        font-size: inherit!important;
+        margin-left: -1em;
+        left: auto;
+        display: inline-block;
+        opacity: 0;
+        content: attr(data-icon);
+        font-family: "ETmodules"!important
+    }
+    body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    .et_pb_image_7 {
+        margin-left: auto;
+        margin-right: auto
+    }
+    body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_cta_1.et_pb_promo .et_pb_promo_button.et_pb_button {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    .et_pb_cta_1.et_pb_promo {
+        margin-top: 0px!important
+    }
+    body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_cta_0.et_pb_promo .et_pb_promo_button.et_pb_button {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    .et_pb_image_6 {
+        margin-left: auto;
+        margin-right: auto
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:hover:after {
+        margin-left: .3em;
+        left: auto;
+        margin-left: .3em;
+        opacity: 1
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:after {
+        line-height: inherit;
+        font-size: inherit!important;
+        margin-left: -1em;
+        left: auto;
+        display: inline-block;
+        opacity: 0;
+        content: attr(data-icon);
+        font-family: "ETmodules"!important
+    }
+    body #page-container .et_pb_section .et_pb_button_0:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button:hover {
+        padding-left: 0.7em;
+        padding-right: 2em
+    }
+    body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.et_pb_button {
+        padding-left: 1em;
+        padding-right: 1em
+    }
+    .et_pb_image_5 {
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_image_4 {
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_image_3 {
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_image_2 {
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_text_2 {
+        font-size: 30px
+    }
+    .et_pb_row_5.et_pb_row {
+        padding-top: 41px!important;
+        padding-top: 41px!important
+    }
