--- a/index.html
+++ b/index.html
@@ -1421,3 +1421,11 @@ body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.
         padding-top: 41px!important;
         padding-top: 41px!important
     }
+.et_pb_image_1 {
+        margin-left: auto;
+        margin-right: auto
+    }
+    .et_pb_image_0 {
+        margin-left: auto;
+        margin-right: auto
+    }
