--- a/index.html
+++ b/index.html
@@ -1429,3 +1429,9 @@ body #page-container .et_pb_section .et_pb_fullwidth_header_0 .et_pb_button_one.
         margin-left: auto;
         margin-right: auto
     }
+body #page-container .et_pb_section .et_pb_button_0:hover:after {
+        margin-left: .3em;
+        left: auto;
+        margin-left: .3em;
+        opacity: 1
+    }
