--- a/index.html
+++ b/index.html
@@ -1435,3 +1435,16 @@ body #page-container .et_pb_section .et_pb_button_0:hover:after {
         margin-left: .3em;
         opacity: 1
     }
+    body #page-container .et_pb_section .et_pb_button_0:before {
+        display: none
+    }
+    body #page-container .et_pb_section .et_pb_button_0:after {
+        line-height: inherit;
+        font-size: inherit!important;
+        margin-left: -1em;
+        left: auto;
+        display: inline-block;
+        opacity: 0;
+        content: attr(data-icon);
+        font-family: "ETmodules"!important
+    }
