--- a/index.html
+++ b/index.html
@@ -1448,3 +1448,12 @@ body #page-container .et_pb_section .et_pb_button_0:hover:after {
         content: attr(data-icon);
         font-family: "ETmodules"!important
     }
+   body #page-container .et_pb_section .et_pb_signup_0.et_pb_subscribe .et_pb_newsletter_button.et_pb_button:hover:after {
+        margin-left: .3em;
+        left: auto;
+        margin-left: .3em;
+        opacity: 1
+    }
+}
+</style></body>
+           </html>
