--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<link href="index.html" rel="pingback">
 	<script type="text/javascript">
-	       document.documentElement.className = 'js';
+	       document.documentElement.className = '';
 	</script>
 	<script>
 	       var et_site_url = 'index.html';
