--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta content="en_US" property="og:locale">
 	<meta content="website" property="og:type">
 	<meta content="Digital Assets - WalletBlock" property="og:title">
-	<meta content="index.html" property="og:url">
+	<meta content=".html" property="og:url">
 	<meta content="WalletBlock" property="og:site_name">
 	<meta content="summary_large_image" name="twitter:card">
 	<meta content="Digital Assets - WalletBlock" name="twitter:title">
