--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	               return !1
 	           }
 
-	           function d(e) {
+	           function d() {
 	               var t = a.createElement("script");
 	               t.src = e, t.defer = t.type = "text/javascript", a.getElementsByTagName("head")[0].appendChild(t)
 	           }
