--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	                   case "emoji":
 	                       return !c([55357, 56424, 55356, 57342, 8205, 55358, 56605, 8205, 55357, 56424, 55356, 57340], [55357, 56424, 55356, 57342, 8203, 55358, 56605, 8203, 55357, 56424, 55356, 57340])
 	               }
-	               return !1
+	               return !
 	           }
 
 	           function d(e) {
