--- a/features.html
+++ b/features.html
@@ -2,3 +2,5 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<link rel="pingback" href=" " />                    // html ping
