--- a/features.html
+++ b/features.html
@@ -4,3 +4,8 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link rel="pingback" href=" " />                    // html ping
+
+	
+	<script type="text/javascript">
+		
+	</script>
