--- a/features.html
+++ b/features.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<link rel="pingback" href=" " />                    // html ping
-
-	
+	<meta charset="UTF-8">
+	<meta content="IE=edge" http-equiv="X-UA-Compatible">
+	<link href="" rel="pingback">
+	<title></title>
+</head>
+<body>
+	// html ping 
 	<script type="text/javascript">
-	document.documentElement.className = 'js';
+	   document.documentElement.className = 'js';
+	</script> 
+	<script>
+	var et_site_url='index.html';var et_post_id='47302';function et_core_page_resource_fallback(a,b){"undefined"===typeof b&&(b=a.sheet.cssRules&&0===a.sheet.cssRules.length);b&&(a.onerror=null,a.onload=null,a.href?a.href=et_site_url+"/?et_core_page_resource="+a.id+et_post_id:a.src&&(a.src=et_site_url+"/?et_core_page_resource="+a.id+et_post_id))}
 	</script>
-<script>var et_site_url='https://blockkeeper.io';var et_post_id='47302';function et_core_page_resource_fallback(a,b){"undefined"===typeof b&&(b=a.sheet.cssRules&&0===a.sheet.cssRules.length);b&&(a.onerror=null,a.onload=null,a.href?a.href=et_site_url+"/?et_core_page_resource="+a.id+et_post_id:a.src&&(a.src=et_site_url+"/?et_core_page_resource="+a.id+et_post_id))}
-</script>
+</body>
+</html>
