--- a/features.html
+++ b/features.html
@@ -17,3 +17,4 @@
 
 	<title>Features - WalletBlock</title>
 	<link rel="canonical" href="features.html" />
+<meta property="og:locale" content="en_US" />
