--- a/features.html
+++ b/features.html
@@ -18,3 +18,4 @@
 	<title>Features - WalletBlock</title>
 	<link rel="canonical" href="features.html" />
 <meta property="og:locale" content="en_US" />
+<meta property="og:type" content="article" />
