--- a/features.html
+++ b/features.html
@@ -19,3 +19,4 @@
 	<link rel="canonical" href="features.html" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="article" />
+<meta property="og:title" content="Features - WalletBlock" />
