--- a/features.html
+++ b/features.html
@@ -20,3 +20,4 @@
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Features - WalletBlock" />
+<meta property="og:url" content="features.html" />
