--- a/features.html
+++ b/features.html
@@ -21,3 +21,4 @@
 <meta property="og:type" content="article" />
 <meta property="og:title" content="Features - WalletBlock" />
 <meta property="og:url" content="features.html" />
+<meta property="og:site_name" content="WalletBlock" />
