--- a/features.html
+++ b/features.html
@@ -22,3 +22,4 @@
 <meta property="og:title" content="Features - WalletBlock" />
 <meta property="og:url" content="features.html" />
 <meta property="og:site_name" content="WalletBlock" />
+<meta name="twitter:card" content="summary_large_image" />
