--- a/features.html
+++ b/features.html
@@ -23,3 +23,4 @@
 <meta property="og:url" content="features.html" />
 <meta property="og:site_name" content="WalletBlock" />
 <meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Features - BlockKeeper" />
