--- a/features.html
+++ b/features.html
@@ -24,3 +24,8 @@
 <meta property="og:site_name" content="WalletBlock" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Features - BlockKeeper" />
+
+	
+	
+	
+<script type='text/javascript'>console.log('PixelYourSite PRO version 7.0.4.1');</script>
