--- a/features.html
+++ b/features.html
@@ -29,3 +29,4 @@
 	
 	
 <script type='text/javascript'>console.log('PixelYourSite PRO version 7.0.4.1');</script>
+<link rel='dns-prefetch' href='//fonts.googleapis.com' />
