--- a/features.html
+++ b/features.html
@@ -30,3 +30,4 @@
 	
 <script type='text/javascript'>console.log('PixelYourSite PRO version 7.0.4.1');</script>
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
+<link rel='dns-prefetch' href='//s.w.org' />
