--- a/features.html
+++ b/features.html
@@ -31,3 +31,4 @@
 <script type='text/javascript'>console.log('PixelYourSite PRO version 7.0.4.1');</script>
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
+<link rel="alternate" type="application/rss+xml" title="BlockKeeper &raquo; Feed" href="https://blockkeeper.io/feed/" />
