--- a/features.html
+++ b/features.html
@@ -31,4 +31,5 @@
 <script type='text/javascript'>console.log('PixelYourSite PRO version 7.0.4.1');</script>
 <link rel='dns-prefetch' href='//fonts.googleapis.com' />
 <link rel='dns-prefetch' href='//s.w.org' />
-<link rel="alternate" type="application/rss+xml" title="BlockKeeper &raquo; Feed" href="https://blockkeeper.io/feed/" />
+<link rel="alternate" type="application/rss+xml" title="WalletBlock &raquo; Feed" href="feed.html" />
+<link rel="alternate" type="application/rss+xml" title="WalletBlock &raquo; Comments Feed" href="comments.html" />
