--- a/features.html
+++ b/features.html
@@ -33,3 +33,23 @@
 <link rel='dns-prefetch' href='//s.w.org' />
 <link rel="alternate" type="application/rss+xml" title="WalletBlock &raquo; Feed" href="feed.html" />
 <link rel="alternate" type="application/rss+xml" title="WalletBlock &raquo; Comments Feed" href="comments.html" />
+
+	
+	<script type="text/javascript">
+			
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	</script>
+	
+	
+	
+	
+	
