--- a/features.html
+++ b/features.html
@@ -65,6 +65,7 @@ img.emoji {
 </style>
 	
 <link rel='stylesheet' id='wp-block-library-css'  href='          ' type='text/css' media='all' />
+<link rel='stylesheet' id='wp-block-library-css'  href='          ' type='text/css' media='all' />
 
 	
 	
