--- a/features.html
+++ b/features.html
@@ -66,6 +66,7 @@ img.emoji {
 	
 <link rel='stylesheet' id='wp-block-library-css'  href='          ' type='text/css' media='all' />
 <link rel='stylesheet' id='wp-block-library-css'  href='          ' type='text/css' media='all' />
+<link rel='stylesheet' id='divi-style-css'  href='           ' type='text/css' media='all' />
 
 	
 	
