--- a/features.html
+++ b/features.html
@@ -67,7 +67,7 @@ img.emoji {
 <link rel='stylesheet' id='wp-block-library-css'  href='          ' type='text/css' media='all' />
 <link rel='stylesheet' id='wp-block-library-css'  href='          ' type='text/css' media='all' />
 <link rel='stylesheet' id='divi-style-css'  href='           ' type='text/css' media='all' />
-
+<link rel='stylesheet' id='et-builder-googlefonts-cached-css'  href='https://fonts.googleapis.com/css?family=Source+Sans+Pro%3A200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C600%2C600italic%2C700%2C700italic%2C900%2C900italic&#038;ver=5.3.2#038;subset=latin,latin-ext' type='text/css' media='all' />
 	
 	
 	
