--- a/features.html
+++ b/features.html
@@ -71,6 +71,7 @@ img.emoji {
 <link rel='stylesheet' id='dashicons-css'  href='        ' type='text/css' media='all' />
 <link rel='stylesheet' id='sb_dcl_custom_css-css'  href='          ' type='text/css' media='all' />
 <link rel='stylesheet' id='cmplz-cookie-css'  href='                    ' type='text/css' media='all' />
+<link rel='stylesheet' id='cmplz-cookie-css'  href='         ' type='text/css' media='all' />
 
 	
 	
