--- a/features.html
+++ b/features.html
@@ -76,4 +76,10 @@ img.emoji {
 
 	
 	
+<script type='text/javascript' src='        '></script>
+<script type='text/javascript' src='         '></script>
+<script type='text/javascript' src='           '></script>
+<script type='text/javascript' src='            '></script>
+<script type='text/javascript' src='              '></script>	
+	
 	
