--- a/features.html
+++ b/features.html
@@ -102,4 +102,4 @@ img.emoji {
 				} );
 		</script>
 	
-<link rel='https://api.w.org/' href='https://.io/wp-json/' />
+<link rel='https://api.w.org/' href='      ' />
