--- a/features.html
+++ b/features.html
@@ -103,3 +103,4 @@ img.emoji {
 		</script>
 	
 <link rel='https://api.w.org/' href='      ' />
+<link rel="EditURI" type="application/rsd+xml" title="RSD" href="       " />
