--- a/features.html
+++ b/features.html
@@ -104,3 +104,4 @@ img.emoji {
 	
 <link rel='https://api.w.org/' href='      ' />
 <link rel="EditURI" type="application/rsd+xml" title="RSD" href="       " />
+<link rel="wlwmanifest" type="application/wlwmanifest+xml" href="       " /> 
