--- a/features.html
+++ b/features.html
@@ -109,3 +109,4 @@ img.emoji {
 <link rel='shortlink' href='index.html />
 <link rel="alternate" type="application/json+oembed" href="        " />
 <link rel="alternate" type="text/xml+oembed" href="    " />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" /><link rel="shortcut icon" href="      .png" />
