--- a/features.html
+++ b/features.html
@@ -122,6 +122,7 @@ body.custom-background { background-color: #fffcfc; }
 			<header id="main-header" data-height-onload="60">			    
                         <div class="container clearfix et_menu_container">
     		        <div class="logo_container">
+			<span class="logo_helper"></span>
 
 			    
 			    
