--- a/features.html
+++ b/features.html
@@ -123,6 +123,7 @@ body.custom-background { background-color: #fffcfc; }
                         <div class="container clearfix et_menu_container">
     		        <div class="logo_container">
 			<span class="logo_helper"></span>
+		        <a href="https://blockkeeper.io/">
 
 			    
 			    
