--- a/features.html
+++ b/features.html
@@ -124,7 +124,8 @@ body.custom-background { background-color: #fffcfc; }
     		        <div class="logo_container">
 			<span class="logo_helper"></span>
 		        <a href="index.html">
-
+</a>
+				</div>
 			    
 		
 			    
