--- a/features.html
+++ b/features.html
@@ -127,7 +127,7 @@ body.custom-background { background-color: #fffcfc; }
 </a>
 				</div>
 			    	<div id="et-top-navigation" data-height="60" data-fixed-height="40">
-
+			<nav id="top-menu-nav">
 		
 			    
 			    
