--- a/features.html
+++ b/features.html
@@ -128,6 +128,6 @@ body.custom-background { background-color: #fffcfc; }
 				</div>
 			    	<div id="et-top-navigation" data-height="60" data-fixed-height="40">
 			<nav id="top-menu-nav">
-		
+		<ul id="top-menu" class="nav"><li id="menu-item-47650" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-47302 current_page_item menu-item-47650">
 			    
 			    
