--- a/features.html
+++ b/features.html
@@ -132,4 +132,5 @@ body.custom-background { background-color: #fffcfc; }
 		<a href="features.html" aria-current="page">Features</a></li>	    
 <li id="menu-item-47647" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47647"><a href="privacy-security.html">Privacy &#038; Security</a></li>
 <li id="menu-item-47646" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47646"><a href="faqs.html">FAQs</a></li>
+<li id="menu-item-50000" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50000"><a href="install.html">Install</a></li>
 
