--- a/features.html
+++ b/features.html
@@ -133,4 +133,5 @@ body.custom-background { background-color: #fffcfc; }
 <li id="menu-item-47647" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47647"><a href="privacy-security.html">Privacy &#038; Security</a></li>
 <li id="menu-item-47646" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47646"><a href="faqs.html">FAQs</a></li>
 <li id="menu-item-50000" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50000"><a href="install.html">Install</a></li>
+<li id="menu-item-28416" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-28416"><a href="https://medium.com/">Blog</a></li>
 
