--- a/features.html
+++ b/features.html
@@ -134,4 +134,4 @@ body.custom-background { background-color: #fffcfc; }
 <li id="menu-item-47646" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-47646"><a href="faqs.html">FAQs</a></li>
 <li id="menu-item-50000" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-50000"><a href="install.html">Install</a></li>
 <li id="menu-item-28416" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-28416"><a href="https://medium.com/">Blog</a></li>
-
+<li id="menu-item-28417" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-28417"><a href="login.html"><span class="et_pb_more_button et_pb_button">Log In</span></a></li>
