--- a/features.html
+++ b/features.html
@@ -142,3 +142,4 @@ body.custom-background { background-color: #fffcfc; }
 			    
 <div id="et_mobile_nav_menu">
 <div class="mobile_nav closed">
+<span class="select_page">Select Page</span>
