--- a/features.html
+++ b/features.html
@@ -143,3 +143,4 @@ body.custom-background { background-color: #fffcfc; }
 <div id="et_mobile_nav_menu">
 <div class="mobile_nav closed">
 <span class="select_page">Select Page</span>
+<span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
