--- a/features.html
+++ b/features.html
@@ -144,3 +144,7 @@ body.custom-background { background-color: #fffcfc; }
 <div class="mobile_nav closed">
 <span class="select_page">Select Page</span>
 <span class="mobile_menu_bar mobile_menu_bar_toggle"></span>
+</div>
+			</div>				</div> 
+			</div> 
+			<div class="et_search_outer">
