--- a/features.html
+++ b/features.html
@@ -148,3 +148,4 @@ body.custom-background { background-color: #fffcfc; }
 			</div>				</div> 
 			</div> 
 			<div class="et_search_outer">
+     			<div class="container et_search_form_container">
