--- a/features.html
+++ b/features.html
@@ -149,3 +149,4 @@ body.custom-background { background-color: #fffcfc; }
 			</div> 
 			<div class="et_search_outer">
      			<div class="container et_search_form_container">
+		<form role="search" method="get" class="et-search-form" action="index.html">
