--- a/features.html
+++ b/features.html
@@ -150,3 +150,4 @@ body.custom-background { background-color: #fffcfc; }
 			<div class="et_search_outer">
      			<div class="container et_search_form_container">
 		<form role="search" method="get" class="et-search-form" action="index.html">
+					<input type="search" class="et-search-field" placeholder="Search &hellip;" value="" name="s" title="Search for:" />					</form>
