--- a/features.html
+++ b/features.html
@@ -151,3 +151,4 @@ body.custom-background { background-color: #fffcfc; }
      			<div class="container et_search_form_container">
 		<form role="search" method="get" class="et-search-form" action="index.html">
 					<input type="search" class="et-search-field" placeholder="Search &hellip;" value="" name="s" title="Search for:" />					</form>
+					<span class="et_close_search_field"></span>
