--- a/features.html
+++ b/features.html
@@ -152,3 +152,9 @@ body.custom-background { background-color: #fffcfc; }
 		<form role="search" method="get" class="et-search-form" action="index.html">
 					<input type="search" class="et-search-field" placeholder="Search &hellip;" value="" name="s" title="Search for:" />					</form>
 					<span class="et_close_search_field"></span>
+</div>
+			</div>
+		</header> 
+			<div id="et-main-area">
+	
+<div id="main-content">
