--- a/features.html
+++ b/features.html
@@ -158,3 +158,5 @@ body.custom-background { background-color: #fffcfc; }
 			<div id="et-main-area">
 	
 <div id="main-content">
+
+<article id="post-47302" class="post-47302 page type-page status-publish hentry">
