--- a/features.html
+++ b/features.html
@@ -173,7 +173,7 @@ body.custom-background { background-color: #fffcfc; }
 
 						
 				<div class="et_pb_text_inner">
-					<h1 style="text-align: center;">BlockKeeper Features</h1>
+					<h1 style="text-align: center;">WalletBlock Features</h1>
 				</div>
 			</div> <!-- .et_pb_text --><div class="et_pb_module et_pb_text et_pb_text_1 et_pb_bg_layout_light  et_pb_text_align_center">
 			    
