--- a/features.html
+++ b/features.html
@@ -246,5 +246,5 @@ body.custom-background { background-color: #fffcfc; }
 				</div> 
 			</div> 
 			</div> 
-			    
+			    <div class="et_pb_column et_pb_column_1_5 et_pb_column_2  et_pb_css_mix_blend_mode_passthrough">
 			    
