--- a/features.html
+++ b/features.html
@@ -260,3 +260,4 @@ body.custom-background { background-color: #fffcfc; }
 				</div> 
 			</div> 
 			</div> 
+<div class="et_pb_column et_pb_column_1_5 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
